--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -311,8 +311,8 @@
     {
      "data": {
       "text/plain": [
-       "low_risk     6090\n",
        "high_risk    6090\n",
+       "low_risk     6090\n",
        "Name: loan_status, dtype: int64"
       ]
      },
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1668,7 @@
        "[5 rows x 85 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1902,7 @@
        "[5 rows x 84 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,50 +1918,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the Logistic Regression model on the unscaled data and print the model score"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=1000)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score"
+    "# Train the Logistic Regression model on the unscaled data and print the model score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "classifier = LogisticRegression(max_iter=1000)\n",
+    "classifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abayomi/opt/anaconda3/envs/PythonAdv/lib/python3.6/site-packages/sklearn/linear_model/_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=1000)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Scale the data"
+    "# Train a Random Forest Classifier model and print the model score\n",
+    "classifier.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['debt_settlement_flag_Y']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xtrain_cols = X_train.columns.tolist()\n",
+    "Xtest_cols = X_test.columns.tolist()\n",
+    "\n",
+    "# Find missing column\n",
+    "missing_cols = [i for i in Xtrain_cols if i not in Xtest_cols]\n",
+    "missing_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the Logistic Regression model on the scaled data and print the model score"
+    "X_test[\"debt_settlement_flag_Y\"] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale the data\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.7140394088669951\n",
+      "Testing Data Score: 0.5886856656741812\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model on the scaled data and print the model score\n",
+    "trainacc_log_unscaled=classifier.score(X_train, y_train)\n",
+    "testacc_log_unscaled=classifier.score(X_test, y_test)\n",
+    "print(f\"Training Data Score: {classifier.score(X_train, y_train)}\")\n",
+    "print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
