--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -1935,7 +1935,6 @@
    "source": [
     "# Train the Logistic Regression model on the unscaled data and print the model score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "classifier = LogisticRegression(max_iter=1000)\n",
     "classifier"
@@ -2047,12 +2046,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 1.0\n",
+      "Testing Score: 0.6399404508719694\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model on the scaled data and print the model score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier(random_state=1, n_estimators=500)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Train a Random Forest Classifier model on the scaled data and print the model score"
-   ]
+   "source": []
   }
  ],
  "metadata": {
