--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -311,8 +311,8 @@
     {
      "data": {
       "text/plain": [
-       "high_risk    6090\n",
        "low_risk     6090\n",
+       "high_risk    6090\n",
        "Name: loan_status, dtype: int64"
       ]
      },
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1986,7 @@
        "['debt_settlement_flag_Y']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2066,6 +2066,74 @@
     "\n",
     "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
     "print(f'Testing Score: {clf.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1247, 1104],\n",
+       "       [ 775, 1576]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "confusion_matrix(y_test, classifier.predict(X_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3151, 2939],\n",
+       "       [2215, 3875]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_train, classifier.predict(X_train_scaled))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   high_risk       0.62      0.53      0.57      2351\n",
+      "    low_risk       0.59      0.67      0.63      2351\n",
+      "\n",
+      "    accuracy                           0.60      4702\n",
+      "   macro avg       0.60      0.60      0.60      4702\n",
+      "weighted avg       0.60      0.60      0.60      4702\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, classifier.predict(X_test_scaled)))"
    ]
   },
   {
